build(RPS): :construction: Copiar RPS_dict.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "gitignore",
         "app.py",
-        "README"
+        "README",
+        "RPS"
     ]
 }
