feat(RPSLS): :sparkles: Erigir código RPSLS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
         "app.py",
         "README",
         "RPS",
-        "test"
+        "test",
+        "RPSLS"
     ],
     "python.testing.pytestArgs": [
         "src"
