--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,5 @@ markers =
     paper: paper behaviour
     scissors: scissors behaviour
     actions: GameActions EnumType behaviour
+    spock: spock extension behaviour
+    lizard: lizard extension behaviour
